# CloudBackendSDK

./: README.md  installSDK.sh
Android/: README  Readme.md
C++/: installC++SDK.sh  readme.md
C++/Examples/: readme.md  user_credentials.cpp
C++/Examples/TutorialAsyncDelegates/: CMake-read-me.txt  CMakeLists.txt  Logic1.cpp  Logic2.cpp  Logic3.cpp  Main.cpp  MyGenericFunctions.cpp  compile.sh
C++/include/: Account.h  ShareManager.h  readme.md
CLI/: README.md  ReadMe.txt
Example Code/: readme.txt
Example Code/Simple code example/: compile.sh  readme.txt
Examples/: readme.txt
Examples/Chop/: compile.sh  partition_large_csv_file.cpp
Examples/Simple/: compile.sh  run.sh
Examples/Traverse/: READme.txt  cb_traverse1.cpp  cb_traverse2.cpp  cb_traverse3.cpp  cb_traverse4.cpp  cb_traverse5.cpp  compile.sh
Examples/Tutorial/: AccountEventProtocol.cpp  AccountEventProtocol.h  ItemEventProtocol.cpp  ItemEventProtocol.h  Logic.h  Logic1.cpp  Logic2.cpp  Logic3.cpp  README.md  compile.sh  run.sh
Java/: installJavaSDK.sh  installSDK.sh  readme.md  readme.txt
Java/Example_loadtable/: AccountDelegate.java  ItemDelegate.java  ShareDelegate.java  go.sh  loadtable.java  run.sh
Java/Examples/: readme.md
Java/Simple_test/: AccountDelegate.java  Compile'n'Run.sh  Compile+Run.sh  ItemDelegate.java  RunMe.java  ShareDelegate.java  TransferDelegate.java  readme.txt  runme.java
Java/lib/: install.sh  readme.md  readme.txt
UI/: README.txt  login.html  login2.html  readme.md  web-server-localhost.bat
iOS/: README.md
include/: README.txt
tools/: readme.md
(+550 files in other folders)
